add jenkins file

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>jarFile</finalName>
     </build>
     <repositories>
         <repository>
