change jenkins file config 2.0

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
     stages {
         stage('Build_image') {
             steps {
-                echo "terst trest"
+                echo "terst trest 222"
             }
         }
     }
