--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
 
     environment{
     		IMAGE_NAME = "gh1ndri/spring_image"
-    		IMAGE_TAG = "spring-app"
+    		IMAGE_TAG = ${GIT_COMMIT}
     }
 
     stages {
