--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/boutique
-spring.datasource.username=
+spring.datasource.url=jdbc:localhost:5432/boutique
+spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
