--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:localhost:5432/boutique
+spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
